Creando la clase Maps
Signed-off-by: Miguel Angel <mipegir@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_principal">ValenParty</string>
     <string name="showcoordbutton">Muestra coordenadas</string>
+    <string name="showmaps">Ver Mapa</string>
 
 
 </resources>
