MAPS: Avanzando Signed-off-by: Miguel Angel <mipegir@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="title_activity_principal">ValenParty</string>
     <string name="showcoordbutton">Muestra coordenadas</string>
     <string name="showmaps">Ver Mapa</string>
+    <string name="launchMostrarMapas">launchMostrarMapas</string>
 
 
 </resources>
