MAIN: modificando la primera activity! Signed-off-by: Miguel Angel <mipegir@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="showmaps">Ver Mapa</string>
     <string name="launchMostrarMapas">launchMostrarMapas</string>
     <string name="boton_buscame">Búscame</string>
+    <string name="testmapas_m">Test Mapas</string>
 
 
 </resources>
