Añadimos créditos en el menu de opciones
Signed-off-by: GusLAN <tavolanza@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="sitio1nombre">Superclub</string>
     <string name="sitio1direccion">C/San Vicente, 95</string>
     <string name="sitio1localidad">Valencia</string>
+    <string name="menu_creditos">Créditos</string>
 </resources>
 
